tests/snapshots/sfc/ts/basic__script_setup_with_style.snap
---
source: crates/vize_compiler_sfc/src/snapshot_tests.rs
assertion_line: 128
expression: ts_output
---
import { defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue"


const _hoisted_1 = { class: "text" }

export default defineComponent({
  name: 'test',
  setup(__props) {

const msg = 'hello'

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", _hoisted_1, _toDisplayString(msg)))
}
}

})
